tests/baselines/reference/optionalParamTypeComparison.errors.txt
==== tests/cases/compiler/optionalParamTypeComparison.ts (2 errors) ====
    var f: (s: string, n?: number) => void;
    var g: (s: string, b?: boolean) => void;
    
    f = g;
    ~
!!! optionalParamTypeComparison.ts(4,1): error TS2012: Type '(s: string, b?: boolean) => void' is not assignable to type '(s: string, n?: number) => void':
!!! 	Call signatures of types '(s: string, b?: boolean) => void' and '(s: string, n?: number) => void' are incompatible.
    g = f;
    ~
!!! optionalParamTypeComparison.ts(5,1): error TS2012: Type '(s: string, n?: number) => void' is not assignable to type '(s: string, b?: boolean) => void':
!!! 	Call signatures of types '(s: string, n?: number) => void' and '(s: string, b?: boolean) => void' are incompatible.